# Augumented_PersonaAgent

./: .gitignore  README.md  pyproject.toml
experiment/: initial_systemprompt.md  userA-1回目.md  userA_non_persona_systemprompt.md  userA_persona_systemprompt.md  userB-1回目.md  userB_persona_systemprompt.md  userC-1回目.md  userC_persona_systemprompt.md
src/agent/: agent.py  custom_logger.py  personalization_method.py  prompts.py  request.py  response.py
src/agent/notebooks/: t-SNE.ipynb
src/agent/tools/: get_weather.py  retrieve_today.py
src/front/: app.py
src/front/chat_log/: chat_log_osawa.json  chat_log_userA.json  chat_log_userB.json  chat_log_userC.json
